--- a/home.css
+++ b/home.css
@@ -10,7 +10,7 @@ body, html {
 }
 
 .background-image {
-    background-image: url("https://raw.githubusercontent.com/Eswariparasa/pse1/refs/heads/main/pse1.jpg"); /* Replace with your background image */
+    background-image: url("https://github.com/Eswariparasa/Mock_test/blob/main/pse1.jpg?raw=true"); /* Replace with your background image */
     background-size: cover;
     background-position: center;
     height: 100%;
